# multi-agentic-orchestration

./: .dockerignore  .env.production.template  .env.sample  .gitignore  CLAUDE.md  DEPLOYMENT_COMPLETE.md  Dockerfile.backend  Dockerfile.frontend  INTEGRATION_TEST_SUMMARY.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  docker-compose.production.yml  docker-compose.yml  package-lock.json  pyproject.toml  test-e2e-flow.mjs  test-execution-monitor.mjs  test-flow-animate.mjs  test-flow-transition.mjs  test-flow.mjs  test-real-execution.mjs  test-sidebar-scroll.mjs  test-sidebar.mjs
.claude/: plan.md
.github/workflows/: ci-cd.yml  load-tests.yml
auth/: __init__.py  dependencies.py  password.py  router.py  tokens.py
db/: connection.py  models.py
db/migrations/: 001_create_users.sql
deployment/: DEPLOYMENT_SUMMARY.md  QUICK_START.md  README.md
deployment/examples/: github-actions-ci.yaml  gitlab-ci.yaml  prometheus-alerts.yaml
deployment/scripts/: install.sh  uninstall.sh  upgrade.sh  validate.sh
docs/: API_DOCUMENTATION.md  FEATURE_API_DOCUMENTATION.md
infrastructure/: README.md
infrastructure/grafana/: dashboards.yml  datasources.yml
infrastructure/nginx/: frontend.conf  nginx.conf
infrastructure/prometheus/: prometheus.yml
infrastructure/scripts/: backup.sh  deploy.sh  (+1 more)
orchestrator/: .env.sample
scripts/: verify_api_docs.py
tests/: IMPLEMENTATION_SUMMARY.md  SECURITY_FINDINGS.md  SECURITY_QUICK_REF.md  SECURITY_README.md  run_security_scan.sh  test_auth.py  test_error_handling.py  test_security_penetration.py
workspace/: workspace.json
(+219 files in other folders)
